--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# PHPStorm
+.idea/*
+
 /app/config/parameters.yml
 /build/
 /phpunit.xml
@@ -14,4 +17,3 @@
 !var/SymfonyRequirements.php
 /vendor/
 /web/bundles/
-/.idea/*
